--- a/branches/branch-playground/plugins/gpg/gpg.vcproj
+++ b/branches/branch-playground/plugins/gpg/gpg.vcproj
@@ -12,6 +12,9 @@
 		/>
 	</Platforms>
 	<ToolFiles>
+		<ToolFile
+			RelativePath="..\..\sim\win32\uic.rules"
+		/>
 	</ToolFiles>
 	<Configurations>
 		<Configuration
@@ -30,6 +33,9 @@
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="Uic"
 			/>
 			<Tool
 				Name="VCXMLDataGeneratorTool"
@@ -121,6 +127,9 @@
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="Uic"
 			/>
 			<Tool
 				Name="VCXMLDataGeneratorTool"
@@ -720,20 +729,14 @@
 					Name="Release|Win32"
 					>
 					<Tool
-						Name="VCCustomBuildTool"
-						Description="Uic&apos;ing $(InputName).ui ..."
-						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h"
+						Name="Uic"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug|Win32"
 					>
 					<Tool
-						Name="VCCustomBuildTool"
-						Description="Uic&apos;ing $(InputName).ui ..."
-						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h"
+						Name="Uic"
 					/>
 				</FileConfiguration>
 			</File>
@@ -744,20 +747,14 @@
 					Name="Release|Win32"
 					>
 					<Tool
-						Name="VCCustomBuildTool"
-						Description="Uic&apos;ing $(InputName).ui ..."
-						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h"
+						Name="Uic"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug|Win32"
 					>
 					<Tool
-						Name="VCCustomBuildTool"
-						Description="Uic&apos;ing $(InputName).ui ..."
-						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h"
+						Name="Uic"
 					/>
 				</FileConfiguration>
 			</File>
@@ -768,20 +765,14 @@
 					Name="Release|Win32"
 					>
 					<Tool
-						Name="VCCustomBuildTool"
-						Description="Uic&apos;ing $(InputName).ui ..."
-						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h"
+						Name="Uic"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug|Win32"
 					>
 					<Tool
-						Name="VCCustomBuildTool"
-						Description="Uic&apos;ing $(InputName).ui ..."
-						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h"
+						Name="Uic"
 					/>
 				</FileConfiguration>
 			</File>
@@ -792,20 +783,14 @@
 					Name="Release|Win32"
 					>
 					<Tool
-						Name="VCCustomBuildTool"
-						Description="Uic&apos;ing $(InputName).ui ..."
-						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h"
+						Name="Uic"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug|Win32"
 					>
 					<Tool
-						Name="VCCustomBuildTool"
-						Description="Uic&apos;ing $(InputName).ui ..."
-						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h"
+						Name="Uic"
 					/>
 				</FileConfiguration>
 			</File>
@@ -816,20 +801,14 @@
 					Name="Release|Win32"
 					>
 					<Tool
-						Name="VCCustomBuildTool"
-						Description="Uic&apos;ing $(InputName).ui ..."
-						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h"
+						Name="Uic"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug|Win32"
 					>
 					<Tool
-						Name="VCCustomBuildTool"
-						Description="Uic&apos;ing $(InputName).ui ..."
-						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h"
+						Name="Uic"
 					/>
 				</FileConfiguration>
 			</File>
@@ -840,20 +819,14 @@
 					Name="Release|Win32"
 					>
 					<Tool
-						Name="VCCustomBuildTool"
-						Description="Uic&apos;ing $(InputName).ui ..."
-						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h"
+						Name="Uic"
 					/>
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Debug|Win32"
 					>
 					<Tool
-						Name="VCCustomBuildTool"
-						Description="Uic&apos;ing $(InputName).ui ..."
-						CommandLine="%qtdir%\bin\uic.exe -o $(InputDir)\ui_$(InputName).h $(InputPath)&#x0D;&#x0A;"
-						Outputs="$(InputDir)ui_$(InputName).h"
+						Name="Uic"
 					/>
 				</FileConfiguration>
 			</File>
