--- a/branches/branch-playground/CMakeLists.txt
+++ b/branches/branch-playground/CMakeLists.txt
@@ -56,6 +56,7 @@ SET(QT_USE_QTUITOOLS 1)
 SET(QT_USE_QTNETWORK 1)
 SET(QT_USE_QT3SUPPORT 1)
 SET(QT_USE_PHONON 1)
+SET(QT_USE_QTTEST 1)
 SET(QT_PHONON_INCLUDE_DIR "/usr/include/phonon")
 INCLUDE(${QT_USE_FILE})
 ADD_DEFINITIONS(-DQT3_SUPPORT_WARNINGS)
